# helloai

./: .gitignore  README.md  hello.py  langgraph.json  pyproject.toml
classin/: CSV_README.md  agent_evaluator.py  column_example.py  csv_processor.py  data.csv  teacher_case.csv  teacher_case_result.csv
gk/: README.md  agent.py  huggingface.py  qwen.py
hellopython/: README.md  async_io.ipynb  process_thread.ipynb  t.py  test.py
huggingface/: intro.ipynb
lchain/: README.md  agent.ipynb  custom_tools.ipynb  debugging.ipynb  lcel.ipynb  llm.py  llm_chain.ipynb  prompt_templates.ipynb  stream_runnables.ipynb  structured_outputs.ipynb  tool_calling.ipynb
lchain/concepts/: lcel.ipynb  prompt_templates.ipynb
lchain/howtos/: custom_tools.ipynb  lcel_cheatsheet.ipynb  parallel.ipynb  passthrough.ipynb  streaming.ipynb  tool_configure.ipynb
lchain/tutorials/: llm_chain.ipynb
lgraph/: README.md  home.ipynb  test.py
lgraph/concepts/: memory.ipynb  persistence.ipynb
lgraph/howtos/: configuration.ipynb  persistence_functional.ipynb  persistence_redis.ipynb  recursion_limit.ipynb  tool_calling.ipynb  tool_calling_errors.ipynb
lgraph/howtos/memory/: manage_conversation_history.ipynb
lgraph/tutorials/: introduction.ipynb  workflows.ipynb
play/: hello.ipynb
