[project]
name = "helloai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipywidgets>=8.1.5",
    "langchain>=0.3.19",
    "langchain-openai>=0.3.7",
    "python-dotenv>=1.0.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
