[project]
name = "helloai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipywidgets>=8.1.5",
    "langchain>=0.3.19",
    "langchain-anthropic>=0.3.9",
    "langchain-community>=0.3.18",
    "langchain-deepseek>=0.1.2",
    "langchain-google-genai>=2.1.1",
    "langchain-openai>=0.3.7",
    "langgraph>=0.3.5",
    "langsmith>=0.3.11",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.5.1",
    "transformers>=4.49.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.80",
    "python-dotenv[cli]>=1.0.1",
]
